{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 93,
  "lineage": "a618bb78-1d4e-370d-6276-4e286f4a938d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "ukg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/applicationGateways/agw-ukg-app/backendAddressPools/backend-pool",
                "ip_addresses": [
                  "10.0.2.4"
                ],
                "name": "backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "certificate_chain_validation_enabled": true,
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "dedicated_backend_connection_enabled": false,
                "host_name": "",
                "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/applicationGateways/agw-ukg-app/backendHttpSettingsCollection/http-settings",
                "name": "http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 30,
                "sni_name": "",
                "sni_validation_enabled": true,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/applicationGateways/agw-ukg-app/frontendIPConfigurations/frontend-ip",
                "name": "frontend-ip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/publicIPAddresses/pip-agw-ukg",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/applicationGateways/agw-ukg-app/frontendPorts/http-port",
                "name": "http-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/applicationGateways/agw-ukg-app/gatewayIPConfigurations/gateway-ip-config",
                "name": "gateway-ip-config",
                "subnet_id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/virtualNetworks/vnet-ukg-app/subnets/snet-application-gateway"
              }
            ],
            "global": [],
            "http2_enabled": false,
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/applicationGateways/agw-ukg-app/frontendIPConfigurations/frontend-ip",
                "frontend_ip_configuration_name": "frontend-ip",
                "frontend_port_id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/applicationGateways/agw-ukg-app/frontendPorts/http-port",
                "frontend_port_name": "http-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/applicationGateways/agw-ukg-app/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/applicationGateways/agw-ukg-app",
            "identity": [],
            "listener": [],
            "location": "centralus",
            "name": "agw-ukg-app",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/applicationGateways/agw-ukg-app/backendAddressPools/backend-pool",
                "backend_address_pool_name": "backend-pool",
                "backend_http_settings_id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/applicationGateways/agw-ukg-app/backendHttpSettingsCollection/http-settings",
                "backend_http_settings_name": "http-settings",
                "http_listener_id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/applicationGateways/agw-ukg-app/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/applicationGateways/agw-ukg-app/requestRoutingRules/routing-rule",
                "name": "routing-rule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-ukg-app-tier",
            "rewrite_rule_set": [],
            "routing_rule": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "agw-ukg-app",
            "resource_group_name": "rg-ukg-app-tier",
            "subscription_id": "fa790eea-37cd-4058-bf6b-fddac2096623"
          },
          "dependencies": [
            "azurerm_network_interface.application",
            "azurerm_public_ip.application",
            "azurerm_public_ip.application_gateway",
            "azurerm_resource_group.ukg",
            "azurerm_subnet.application",
            "azurerm_subnet.application_gateway",
            "azurerm_virtual_network.ukg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/networkInterfaces/nic-ukg-app",
            "internal_domain_name_suffix": "kswasei3zecuvj2xnu2lszwtdc.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/publicIPAddresses/pip-ukg-app",
                "subnet_id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/virtualNetworks/vnet-ukg-app/subnets/snet-application"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "mac_address": "00-0D-3A-96-41-46",
            "name": "nic-ukg-app",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-ukg-app-tier",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Project": "Azure UKG App Tier"
            },
            "virtual_machine_id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Compute/virtualMachines/vm-ukg-app"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-ukg-app",
            "resource_group_name": "rg-ukg-app-tier",
            "subscription_id": "fa790eea-37cd-4058-bf6b-fddac2096623"
          },
          "dependencies": [
            "azurerm_public_ip.application",
            "azurerm_resource_group.ukg",
            "azurerm_subnet.application",
            "azurerm_virtual_network.ukg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/networkSecurityGroups/nsg-application",
            "location": "centralus",
            "name": "nsg-application",
            "resource_group_name": "rg-ukg-app-tier",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Project": "Azure UKG App Tier"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-application",
            "resource_group_name": "rg-ukg-app-tier",
            "subscription_id": "fa790eea-37cd-4058-bf6b-fddac2096623"
          },
          "dependencies": [
            "azurerm_resource_group.ukg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/networkSecurityGroups/nsg-database",
            "location": "centralus",
            "name": "nsg-database",
            "resource_group_name": "rg-ukg-app-tier",
            "security_rule": [],
            "tags": {
              "Project": "Azure UKG App Tier"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-database",
            "resource_group_name": "rg-ukg-app-tier",
            "subscription_id": "fa790eea-37cd-4058-bf6b-fddac2096623"
          },
          "dependencies": [
            "azurerm_resource_group.ukg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/publicIPAddresses/pip-ukg-app",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.249.169.162",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pip-ukg-app",
            "resource_group_name": "rg-ukg-app-tier",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Project": "Azure UKG App Tier"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip-ukg-app",
            "resource_group_name": "rg-ukg-app-tier",
            "subscription_id": "fa790eea-37cd-4058-bf6b-fddac2096623"
          },
          "dependencies": [
            "azurerm_resource_group.ukg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "application_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/publicIPAddresses/pip-agw-ukg",
            "idle_timeout_in_minutes": 4,
            "ip_address": "135.119.63.154",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pip-agw-ukg",
            "resource_group_name": "rg-ukg-app-tier",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip-agw-ukg",
            "resource_group_name": "rg-ukg-app-tier",
            "subscription_id": "fa790eea-37cd-4058-bf6b-fddac2096623"
          },
          "dependencies": [
            "azurerm_resource_group.ukg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/virtualNetworks/vnet-ukg-app/subnets/snet-application",
            "name": "snet-application",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-ukg-app-tier",
            "virtual_network_name": "vnet-ukg-app"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-application",
            "resource_group_name": "rg-ukg-app-tier",
            "subscription_id": "fa790eea-37cd-4058-bf6b-fddac2096623",
            "virtual_network_name": "vnet-ukg-app"
          },
          "dependencies": [
            "azurerm_resource_group.ukg",
            "azurerm_virtual_network.ukg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "application_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/virtualNetworks/vnet-ukg-app/subnets/snet-application-gateway",
            "name": "snet-application-gateway",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-ukg-app-tier",
            "virtual_network_name": "vnet-ukg-app"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-application-gateway",
            "resource_group_name": "rg-ukg-app-tier",
            "subscription_id": "fa790eea-37cd-4058-bf6b-fddac2096623",
            "virtual_network_name": "vnet-ukg-app"
          },
          "dependencies": [
            "azurerm_resource_group.ukg",
            "azurerm_virtual_network.ukg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/virtualNetworks/vnet-ukg-app/subnets/snet-data",
            "name": "snet-data",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-ukg-app-tier",
            "virtual_network_name": "vnet-ukg-app"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-data",
            "resource_group_name": "rg-ukg-app-tier",
            "subscription_id": "fa790eea-37cd-4058-bf6b-fddac2096623",
            "virtual_network_name": "vnet-ukg-app"
          },
          "dependencies": [
            "azurerm_resource_group.ukg",
            "azurerm_virtual_network.ukg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/virtualNetworks/vnet-ukg-app/subnets/snet-application",
            "network_security_group_id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/networkSecurityGroups/nsg-application",
            "subnet_id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/virtualNetworks/vnet-ukg-app/subnets/snet-application"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.application",
            "azurerm_resource_group.ukg",
            "azurerm_subnet.application",
            "azurerm_virtual_network.ukg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "ukg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1109ac54-c91d-4a05-a797-6d38b966d31a",
            "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/virtualNetworks/vnet-ukg-app",
            "location": "centralus",
            "name": "vnet-ukg-app",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-ukg-app-tier",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/virtualNetworks/vnet-ukg-app/subnets/snet-application-gateway",
                "name": "snet-application-gateway",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/virtualNetworks/vnet-ukg-app/subnets/snet-application",
                "name": "snet-application",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/networkSecurityGroups/nsg-application"
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/fa790eea-37cd-4058-bf6b-fddac2096623/resourceGroups/rg-ukg-app-tier/providers/Microsoft.Network/virtualNetworks/vnet-ukg-app/subnets/snet-data",
                "name": "snet-data",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Project": "Azure UKG App Tier"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-ukg-app",
            "resource_group_name": "rg-ukg-app-tier",
            "subscription_id": "fa790eea-37cd-4058-bf6b-fddac2096623"
          },
          "dependencies": [
            "azurerm_resource_group.ukg"
          ]
        }
      ]
    }
  ]
}